--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">emirim_Project7_2</string>
+    <string name="btn_bg">배경색 변경</string>
+    <string name="btn_change">버튼 변경</string>
+    <string name="item_title_bg1">배경색(Rad)</string>
+    <string name="item_title_bg2">배경색(Yellow)</string>
+    <string name="item_title_bg3">배경색(Blue)</string>
+    <string name="item_title_rotate">버튼 45도 회전</string>
+    <string name="item_title_zoom">버튼 2배 확대</string>
 </resources>
